fixed footer spacing for large screens

--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -1,10 +1,8 @@
 .footer__navigation{
     position: sticky;
-    height: 175px;
-    margin: 0 auto -175px;
+    height: 20vh;
+    margin: auto auto -175px auto;
     width: 100%;
-    display: flex;
-    justify-content: space-around;
     align-items: center;
     background: #00c6ff;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
@@ -13,15 +11,14 @@
 
 .footer_navigation-items ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .footer_navigation-items li {
     color: white;
     text-decoration: none;
+    margin-top: 3vh;
 }
 
 .footer_navigation-items p {
@@ -43,7 +40,6 @@
 /*Display for small screens*/
 @media (max-width: 768px) {
     .footer_navigation-items li {
-        margin: 0 29px;
     }
 
     .footer_navigation-items p {
@@ -55,7 +51,6 @@
 /*Display for large screens*/
 @media (min-width: 769px) {
     .footer_navigation-items li {
-    margin: 0 1%;
     }
 
     .footer__toggle-button {
